<resources>
    <string name="app_name">ToDoList</string>
    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="need_account">Need Account? Create One</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password2">Renter Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!-- Navigation Drawer Strings -->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <!-- TaskView Create Strings (Adding a new Task) -->
    <string name="task_title_hint">Task Title</string>
    <string name="task_description_hint">Task Description</string>
    <string name="priority_radio">Priority Level</string>
    <string name="priority_none">None</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    <string name="pick_time">Set Time To Complete</string>
    <string name="pick_date">Set Future Date</string>
    <string name="done_task">Done</string>
    <string name="cancel_task">Cancel</string>

</resources>
