<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/taskview_create_layout_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="test2">

        <EditText
            android:id="@+id/taskview_create_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/task_description_hint"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/taskview_create_radio_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_radio"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taskview_create_radiogrp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/taskview_create_radio_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_none" />
        <RadioButton
            android:id="@+id/taskview_create_radio_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_high" />
        <RadioButton
            android:id="@+id/taskview_create_radio_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_medium" />
        <RadioButton
            android:id="@+id/taskview_create_radio_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_low" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taskview_create_btn_picktime"
            android:text="@string/pick_time"
            android:onClick="showTimePickerDialog"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taskview_create_btn_pickdate"
            android:text="@string/pick_date"
            android:onClick="showDatePickerDialog"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taskview_create_btn_canceltask"
            android:text="@string/cancel_task"
            android:onClick="cancelCreateTask"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/taskview_create_btn_createtask"
            android:text="@string/create_task"/>
    </LinearLayout>

</LinearLayout>