<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_marginTop="24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/taskview_create_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/task_title_hint"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/taskview_create_radio_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_radio"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/taskview_create_radiogrp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/taskview_create_radio_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_none"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/taskview_create_radio_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_high" />
            <RadioButton
                android:id="@+id/taskview_create_radio_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_medium" />
            <RadioButton
                android:id="@+id/taskview_create_radio_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_low" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/taskview_create_tv_datetime"
                    android:layout_centerHorizontal="true"
                    android:text="No Time Set"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/taskview_create_btn_picktime"
                    android:layout_below="@+id/taskview_create_tv_datetime"
                    android:text="@string/pick_time"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/taskview_create_btn_pickdate"
                    android:layout_below="@+id/taskview_create_tv_datetime"
                    android:layout_toRightOf="@+id/taskview_create_btn_picktime"
                    android:text="@string/pick_date"/>
            </RelativeLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp">

            <EditText
                android:id="@+id/taskview_create_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/task_description_hint" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taskview_create_btn_canceltask"
                android:text="@string/cancel_task"
                android:onClick="cancelCreateTask"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taskview_create_btn_createtask"
                android:text="@string/done_task"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>